Ajout de la migration et du push vers ma base de données

--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "version": "1.0.50",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "bun run --watch src/index.ts"
+    "dev": "bun run --watch src/index.ts",
+    "db:migrate": "bunx prisma migrate dev",
+    "db:push": "prisma db push"
   },
   "prisma": {
     "seed": "node scripts/seed.js"
   },
   "dependencies": {
+    "@prisma/client": "^5.9.1",
     "elysia": "latest"
   },
   "devDependencies": {
