--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "bun run --watch src/index.ts",
-    "db:migrate": "bunx prisma migrate dev",
+    "db:migrate": "bunx prisma migrate dev --name init",
     "db:push": "prisma db push"
   },
   "prisma": {
