--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "app",
   "version": "1.0.50",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "vitest",
     "dev": "bun run --watch src/index.ts",
     "db:migrate": "bunx prisma migrate dev --name init",
     "db:push": "prisma db push"
@@ -12,11 +12,13 @@
   },
   "dependencies": {
     "@prisma/client": "^5.9.1",
-    "elysia": "latest"
+    "elysia": "latest",
+    "ts-node": "^10.9.2"
   },
   "devDependencies": {
     "bun-types": "latest",
-    "prisma": "^5.9.1"
+    "prisma": "^5.9.1",
+    "vitest": "^1.2.2"
   },
   "module": "src/index.js"
 }
