--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
     "test": "vitest",
     "dev": "bun run --watch src/index.ts",
     "db:migrate": "bunx prisma migrate dev --name init",
-    "db:push": "prisma db push"
+    "db:push": "prisma db push",
+    "db:seed": "bunx prisma db seed"
   },
   "prisma": {
-    "seed": "node scripts/seed.js"
+    "seed": "node prisma/seed.js"
   },
   "dependencies": {
     "@prisma/client": "^5.9.1",
