--- a/api/package.json
+++ b/api/package.json
@@ -12,6 +12,7 @@
     "seed": "node prisma/seed.js"
   },
   "dependencies": {
+    "@elysiajs/cors": "^0.8.0",
     "@prisma/client": "^5.9.1",
     "elysia": "latest",
     "ts-node": "^10.9.2"
