--- a/api/package.json
+++ b/api/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@elysiajs/cors": "^0.8.0",
+    "@faker-js/faker": "^8.4.1",
     "@prisma/client": "^5.9.1",
     "elysia": "latest",
     "ts-node": "^10.9.2"
